# digital_twin

./: README.md
description/: package.xml
description/config/: control.yaml
description/launch/: gazebo.launch
description/urdf/: for_assistant.xacro  for_moveit.xacro  from_assistant.xacro  model.xacro
manipualtor/: CMakeLists.txt  package.xml
manipualtor/launch/: gazebo.launch  model.launch  model.rviz  rviz.launch  spawn.launch
manipualtor/urdf/: model.gazebo  model.xacro  model_moveit.xacro
manipulator_controller/: README.md
manipulator_controller/control/: package.xml
manipulator_controller/description/: package.xml
manipulator_controller/gazebo/: package.xml
manipulator_controller/model_control/: CMakeLists.txt  README.md  package.xml
manipulator_controller/model_control/config/: model_control.yaml
manipulator_controller/model_control/launch/: model_control.launch
manipulator_controller/model_description/: CMakeLists.txt  README.md  package.xml
manipulator_controller/model_gazebo/: CMakeLists.txt  README.md  package.xml
manipulator_controller/model_gazebo/launch/: model_world.launch
manipulator_moveit_config/: package.xml
manipulator_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml
moveit_config/: package.xml
my_robot/: Readme.txt  package.xml
my_robot/urdf/: robot.gazebo  (+1 more)
my_robot_description/: CMakeLists.txt  package.xml
my_robot_manipulation/: CMakeLists.txt  add_platform_vitamins.cpp  package.xml
my_robot_moveit_config/: .setup_assistant  package.xml
(+69 files in other folders)
