<?xml version="1.0"?>
<package>
  <name>model_control</name>
  <version>0.0.0</version>
  <description>The model_control package</description>

  <maintainer email="tarizina98@mail.ru">Nastya</maintainer>

  <license>BSD</license>

  <author email="tarizina98@mail.ru">Nastya</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
